force-app/main/default/objects/Event_History__c/Event_History__c.object-meta.xml
<CustomObject>
    <label>Event History</label>
    <pluralLabel>Event History</pluralLabel>
    <description>Attendance log: this person was on the list for this event. Written only by the Screen 1 import, which otherwise does not touch Contacts at all. Deliberately unrelated to Event_Invitee__c — that object carries invitation and approval state, this one carries history, and the two are allowed to disagree.</description>
    <nameField>
        <label>Event History Number</label>
        <type>AutoNumber</type>
        <displayFormat>EH-{00000}</displayFormat>
    </nameField>
    <!--
      Standalone, so it needs its own OWD rather than inheriting one. Read/Write
      matches the permissive posture already taken for the event: an attendance log
      nobody can read is not a log. Tightening this is a production lever.
    -->
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>