force-app/main/default/objects/Event_History__c/fields/Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Email__c</fullName>
    <label>Attendee Email</label>
    <description>Reads correctly whether the attendee is a Contact or a Lead, so one report covers both and no consumer has to branch. Same technique as the Invitee_*__c fields on Event_Invitee__c.</description>
    <type>Text</type>
    <formula>BLANKVALUE(Contact__r.Email, Lead__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>