force-app/main/default/objects/Event_History__c/fields/Attendee_Org__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Org__c</fullName>
    <label>Attendee Organisation</label>
    <description>Reads correctly whether the attendee is a Contact or a Lead, so one report covers both and no consumer has to branch. Same technique as the Invitee_*__c fields on Event_Invitee__c. The Account name for a Contact, the Lead&apos;s free-text Company for a Lead.</description>
    <type>Text</type>
    <formula>BLANKVALUE(Contact__r.Account.Name, Lead__r.Company)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>