force-app/main/default/objects/Event_History__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <label>Attendee Type</label>
    <description>Reads correctly whether the attendee is a Contact or a Lead, so one report covers both and no consumer has to branch. Same technique as the Invitee_*__c fields on Event_Invitee__c.</description>
    <type>Text</type>
    <formula>IF(ISBLANK(Contact__c), &quot;Lead&quot;, &quot;Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>