force-app/main/default/objects/Event_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Set when the attendee is an existing customer Contact. Exactly one of Contact__c / Lead__c is populated.</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event History</relationshipLabel>
    <relationshipName>Event_History</relationshipName>
    <!--
      SetNull, not Restrict: Restrict would let this log block deletion of a standard
      Contact that other teams own, which is not ours to do. The trade is that deleting
      a tagged person leaves an orphan row. Whether a SetNull cascade re-fires the XOR
      validation rule is untested — see Open Question 14 in design.md.
    -->
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>