force-app/main/default/objects/Event_History__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <description>The event value from the uploaded CSV, verbatim. Deliberately free text and NOT validated against Marketing_Event__c: the log has to be able to record a conference nobody ever created a record for.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>