force-app/main/default/objects/Event_History__c/fields/Imported_On__c.field-meta.xml
<CustomField>
    <fullName>Imported_On__c</fullName>
    <label>Imported On</label>
    <description>When this tag was recorded. Not when the event happened — the CSV does not carry that.</description>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>