force-app/main/default/objects/Event_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <description>Set when the attendee has no customer relationship — a professor, speaker or press contact. Exactly one of Contact__c / Lead__c is populated.</description>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Event History</relationshipLabel>
    <relationshipName>Event_History</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>