force-app/main/default/objects/Event_History__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <label>Source File</label>
    <description>Name of the uploaded file this tag came from, so a questionable row can be traced back to the list that produced it.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>