force-app/main/default/objects/Event_History__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <label>Unique Key</label>
    <description>Contact or Lead Id + the normalised event name. Upserting on this is what makes re-running an import a no-op: the fact recorded is "was on the list for this event", not "was imported N times". A person who exists as both a Contact and a Lead accumulates two parallel histories — the same known gap as Open Question 9.</description>
    <type>Text</type>
    <length>200</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>